# esp32-ntrip-DUO

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
button/: CMakeLists.txt  button.c
main/: CMakeLists.txt  config.c  idf_component.yml  main.c  network.c  retry.c  web_server.c  wifi.c
main/include/: config.h  esp_netif_types.h  network.h
main/include/interface/: ntrip.h  socket_client.h  socket_server.h
main/interface/: ntrip_server.c  socket_server.c
www/: index.html
